Use nondeprecated Integer creator